--- a/debuggedlabs-site/src/index.html
+++ b/debuggedlabs-site/src/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DebuggedlabsSite</title>
+  <title>Debugged Labs</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!-- Create our Angular object -->
   <app-root></app-root>
 </body>
 </html>
