--- a/debuggedlabs-site/src/index.html
+++ b/debuggedlabs-site/src/index.html
@@ -7,9 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!--- Bootstrap -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
-  <!-- Create our Angular object -->
-  <app-root></app-root>
+    <app-root></app-root>
 </body>
 </html>
