--- a/debuggedlabs-site/src/index.html
+++ b/debuggedlabs-site/src/index.html
@@ -6,7 +6,12 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Google Font imports -->
+  <link href="https://fonts.googleapis.com/css?family=Cairo:700,300&display=swap" rel="stylesheet">
 
   <!--- Bootstrap -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
