--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <base href="/">
   <meta charset="utf-8"/>
   <title>Debugged Labs</title>
-  <base href="/" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
